tone color, watson ux, change ruser files to user,

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,5 +1,5 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.inverted.three.item.menu
+    .ui.fluid.attached.inverted.three.item.menu
         // a.icon.item.toggle_sidebar.no_blink
         //     i.bars.icon
     
