--- a/parts/reddit/subreddit.jade
+++ b/parts/reddit/subreddit.jade
@@ -9,7 +9,7 @@ template(name='subreddit')
                 // img(src=banner_background_image)
                 a.ui.basic.compact.icon.button(href="/")
                     i.chevron.left.grey.icon
-                    i.reddit.icon
+                    i.search.icon
                     // img.ui.mini.inline.image(src=icon_img)
                 img.get_info.shadowed.ui.inline.image(src=logo_url )
                 .ui.inline.header.get_info #{data.display_name}
