--- a/client/nav.jade
+++ b/client/nav.jade
@@ -7,11 +7,11 @@ template(name='nav')
             i.search.large.icon
         // a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
         //     i.search.large.icon
-        a.icon.item.blink(href="/subs" class="{{isActiveRoute 'subs'}}")
+        a.icon.item.blink(href="/subs" class="{{isActiveRoute regex='sub'}}")
             i.large.fire.icon
         // a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
         //     i.stack.exchange.large.icon
-        a.icon.item.blink(href="/users" class="{{isActiveRoute 'users'}}")
+        a.icon.item.blink(href="/users" class="{{isActiveRoute regex='user'}}")
             i.users.large.icon
         // .item(title='session karma')
         //     i.grey.lightning.icon
