--- a/parts/reddit/users.jade
+++ b/parts/reddit/users.jade
@@ -114,23 +114,27 @@ template(name='user_karma_sort_button')
             
 template(name='user_top_emotion_small')
     .ui.basic.label {{ to_percent avg_sent_score}} sentiment
-    .ui.green.small.inline.header
+    div
+    .ui.green.tiny.inline.header
         | {{ to_percent avg_joy_score}}% joy
         | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
-
-    .ui.blue.small.inline.header
+    div
+    .ui.blue.tiny.inline.header
         |{{fixed0 rep_sadness}} sad
         | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
+    div
 
-    .ui.red.small.inline.header 
+    .ui.red.tiny.inline.header 
         | {{ to_percent avg_anger_score}}% anger
         | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
+    div
 
-    .ui.orange.small.inline.header
+    .ui.orange.tiny.inline.header
         |{{fixed0 rep_disgust}} disgust
         | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
+    div
 
-    .ui.grey.small.inline.header
+    .ui.grey.tiny.inline.header
         |{{fixed0 rep_fear}} fear
         | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
                 
