--- a/parts/reddit/user.jade
+++ b/parts/reddit/user.jade
@@ -5,7 +5,7 @@ template(name='user')
         .ui.hidden.divider
         .ui.hidden.divider
         .ui.center.aligned.basic.segment.search
-            i.massive.grey.yin.yang.loading.link.icon.get_user_info
+            i.massive.grey.user.outline.loading.link.icon.get_user_info
             .ui.big.header
                 |#{current_username}...
         // .ui.massive.fluid.button.f17.zoomer.pointer.search 
