--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,5 @@
 img {
-    border-radius: 7px;
+    border-radius: 5px;
 }
 
 .black_text {
@@ -681,7 +681,7 @@ a.title, #title {
 
 input {
     /*margin: 7px !important;*/
-    /*border-radius: 7px !important; */
+    border-radius: 7px !important; 
 }
 
 ::-webkit-scrollbar {
