split user profile page again, working user_tags, i think run watson on search view, 20 tags in search, working is_imge rpage view and zoom icon into new window

--- a/client/style.css
+++ b/client/style.css
@@ -9,6 +9,9 @@ img {
     margin: 1px !important;
 }
 
+.zoom_cursor {
+  cursor: zoom-in !important
+}
 
 body {
   /* font-family: 'Raleway', sans-serif !important; */
