--- a/parts/reddit/users.jade
+++ b/parts/reddit/users.jade
@@ -9,14 +9,14 @@ template(name='users')
             .ui.small.fluid.icon.input
                 i.search.icon
                 input.search_tags(type='text')
-            if selected_user_tags
+            if picked_user_tags
                 // #clear_tags.ui.grey.icon.compact.circular.button
                 //     i.remove.icon
-                each selected_user_tags
-                    .unselect_user_tag.ui.black.compact.circular.button
+                each picked_user_tags
+                    a.unpick_user_tag.ui.black.compact.circular.button
                         strong !{this}
             each all_user_tags
-                .ui.circular.label.select_user_tag(class=cloud_tag_class title=count) !{this.name}
+                a.ui.basic.label.pick_user_tag(class=cloud_tag_class title=count) !{this.name}
                     // small #{this.count}
             // unless all_tags.count
             //     .ui.basic.center.aligned.segment
