bginning of split userposts and user_comments into separte templates with loading methods, updates, etc

--- a/parts/reddit/rpage.jade
+++ b/parts/reddit/rpage.jade
@@ -8,9 +8,9 @@ template(name='rpage')
                 span.ui.header.zoomer(class=post_header_class)
                     .ui.label #{data.ups}
                     |!{data.title} #{data.link_title}
-                .ui.basic.circular.compact.small.button.get_post
-                    i.external.icon
-                    |#{data.permalink}
+                // .ui.basic.circular.compact.small.button.get_post
+                //     i.external.icon
+                //     |#{data.permalink}
                 div
                 // if skv_is 'view_section' 'main'
                 .scrolling
